# esp32c6-vornado

./: Cargo.toml  cfg.base.toml  espflash.toml  partition-table.csv  sdkconfig.defaults
.cargo/: config.toml
misc/: broadlink_packet.hexproj
src/: app.rs  common.rs  consts.rs  ir.rs  main.rs  state.rs
