[package]
name = "c6-mqtt-fan"
version = "0.1.0"
authors = ["Kareem ElFaramawi <kareem02@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "c6-mqtt-fan"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = 0
# opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["embassy-time-driver", "embassy-sync"] }
toml-cfg = "0.2.0"
embedded-svc = "0.28.0"
anyhow = "1.0.89"
hex = "0.4.3"
ha-mqtt-discovery = { git = "https://github.com/krx/ha-mqtt-discovery-rs.git", version = "0.1.0" }
serde_json = "1.0.128"
base64ct = { version = "1.6.0", features = ["std", "alloc"] }
binrw = "0.14.1"
serde = { version = "1.0.210", features = ["derive"] }
embassy-futures = "0.1.1"
embassy-executor = { version = "0.6.1", features = ["integrated-timers", "executor-thread", "arch-std"] }
embassy-time = { version = "0.3.2" }
embassy-sync = { version = "0.6.0", features = ["std"] }
static_str_ops = "0.1.2"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
